--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "newsletr.doc.tar.xz": c140a7811ea242b5c42c3f29a8011cc35f9393da
-  "newsletr.tar.xz": d1829aa749dd2bb7ad4773f1c7aa8f3d0151ca39
+  newsletr.doc.tar.xz: 62fc4374b5cb5b2e06df27cd3c3ce7422db9fc0b
+  newsletr.tar.xz: 2eb9e2428cb831d1327ac3b66a257c06b9e05889
